tests/ui/rfcs/rfc-2632-const-trait-impl/const-drop.stock.stderr
error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-drop.rs:19:22
   |
LL | const fn a<T: ~const Destruct>(_: T) {}
   |                      ^^^^^^^^

error[E0493]: destructor of `S<'_>` cannot be evaluated at compile-time
  --> $DIR/const-drop.rs:24:13
   |
LL |     let _ = S(&mut c);
   |             ^^^^^^^^^- value is dropped here
   |             |
   |             the destructor for this type cannot be evaluated in constant functions

error[E0493]: destructor of `T` cannot be evaluated at compile-time
  --> $DIR/const-drop.rs:19:32
   |
LL | const fn a<T: ~const Destruct>(_: T) {}
   |                                ^      - value is dropped here
   |                                |
   |                                the destructor for this type cannot be evaluated in constant functions

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0493`.
